<resources>
    <string name="app_name">KisilerApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home Page</string>
    <string name="menu_colleagues">Colleagues</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_family">Family</string>
    <string name="menu_school">School</string>


    <string name="personApp">PersonApp</string>
    <string name="welcome">Welcome to your new person app</string>
    <string name="designedBy">designed by: Vefa Can</string>
    <string name="group">Group</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="adress">Adress</string>
    <string name="telephone">Telephone</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="add_person">Add Person</string>
    <string name="select_group">Select Group</string>


</resources>