<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/page_background"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">


    <TextView
        android:id="@+id/txtNoteApp"
        android:layout_width="185dp"
        android:layout_height="63dp"
        android:fontFamily="@font/caveat"
        android:text="@string/personApp"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_gif"
        app:layout_constraintEnd_toEndOf="@+id/img_gif"
        app:layout_constraintStart_toStartOf="@+id/img_gif"
        app:layout_constraintTop_toTopOf="@+id/img_gif" />

    <TextView
        android:id="@+id/txtDesignedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/designedBy"
        android:fontFamily="@font/specialfont"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/welcome"
        android:fontFamily="@font/caveat"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_gif" />

    <ImageView
        android:id="@+id/img_gif"
        android:layout_width="93dp"
        android:layout_height="88dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>